--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe generator</title>
     <link rel="stylesheet" href="/style.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
     <div class="container">
       <header><h1>Welcome to the AI Recipe Generator</h1></header>
       <main>
-        <form>
+        <form id="recipe-generator-form">
           <input
             type="text"
             placeholder="Enter the food for the Recipe"
@@ -21,7 +22,7 @@
 
           <input type="submit" value="submit" class="btn" />
         </form>
-        <div class="response"></div>
+        <div class="response" id="recipe">HI</div>
       </main>
 
       <footer>
