--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Recipe generator</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -18,11 +19,12 @@
             autofocus
             required
             autocomplete="off"
-            class="prompt" />
+            class="prompt"
+            id="user-instructions" />
 
           <input type="submit" value="submit" class="btn" />
         </form>
-        <div class="response" id="recipe">HI</div>
+        <div class="response" id="recipe"></div>
       </main>
 
       <footer>
