--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
       </main>
 
       <footer>
-        This AI project was coded by <a href="http://">Angela</a> and is
-        <a href="http://">Open sourced on Github</a> and hosted on
-        <a href="http://">Vercel</a>
+        This AI project was coded by
+        <a href="https://github.com/AngelaSinonge12-ux">Angela</a> and is
+        <a href="https://github.com/AngelaSinonge12-ux/Recipe_Generator"
+          >Open sourced on Github</a
+        >
+        and hosted on
+        <a href="">Vercel</a>
       </footer>
     </div>
     <script src="/src/index.js"></script>
