--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           >Open sourced on Github</a
         >
         and hosted on
-        <a href="">Vercel</a>
+        <a href="https://recipe-generator-tau.vercel.app/">Vercel</a>
       </footer>
     </div>
     <script src="/src/index.js"></script>
